--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "babel-plugin-root-import": "^6.6.0",
     "history": "^5.1.0",
+    "html-react-parser": "^1.4.3",
     "mdb-react-ui-kit": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
