--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "history": "^5.1.0",
     "html-react-parser": "^1.4.3",
     "mdb-react-ui-kit": "^2.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.1",
+    "react-paginate": "^8.1.0",
     "react-router-dom": "^6.0.2",
     "react-safe": "^1.3.0",
     "react-scripts": "4.0.3",
